--- a/JasonEgGUI/view/index.html
+++ b/JasonEgGUI/view/index.html
@@ -47,7 +47,18 @@
     <div class="panel-body">
         <section>
             <div id="one"><canvas id="myCanvas" ></canvas></div>
-            <div id="two"><canvas id="sideCanvas" ></canvas></div>
+            <div id="two"><h4 id="headSide1" >ADD</h4><panel id="sideCanvas" >
+                <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-record" aria-hidden="false"></span></button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span></button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-rub" aria-hidden="true"></span></button>
+                </div>
+            </div></panel></div>
         </section>
     </div>
     <!--br-->
