The Folder DemoGUIJason is the version I demonstrated this morning. need to add joint to this version...

--- a/JasonEgGUI/view/index.html
+++ b/JasonEgGUI/view/index.html
@@ -49,15 +49,22 @@
             <div id="one"><canvas id="myCanvas" ></canvas></div>
             <div id="two"><h4 id="headSide1" >ADD</h4><panel id="sideCanvas" >
                 <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-record" aria-hidden="false"></span></button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span></button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-rub" aria-hidden="true"></span></button>
-                </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-record" aria-hidden="false"></span></button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span></button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-rub" aria-hidden="true"></span></button>
+                    </div>
+                </div><h4 id="headSide2">MODIFY</h4><div class="btn-group-vertical" role="group" aria-label="...">
+                <button type="button" class="btn btn-default">Left</button>
+                <button type="button" class="btn btn-default">Middle</button>
+                <button type="button" class="btn btn-default">Right</button>
+                <button type="button" class="btn btn-default">Right</button>
+                <button type="button" class="btn btn-default">Right</button>
+                <button type="button" class="btn btn-default">Right</button>
             </div></panel></div>
         </section>
     </div>
