The Folder DemoGUIJason is the version I demonstrated this morning. need to add joint to this version...

--- a/DemoGUI/view/styles.css
+++ b/DemoGUI/view/styles.css
@@ -13,7 +13,7 @@ section {
     margin: auto;
     padding: 4px;
 }
-#one{
+#myholder{
     width: 76%;
     height: 420px;
     background: lightgrey;
