--- a/DemoGUI/view/index.html
+++ b/DemoGUI/view/index.html
@@ -21,21 +21,82 @@
     <script src="../js/joint.js"></script>
     <!--link to jointScript.js-->
     <script src="../view/jointScript.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="page-header">
+<!--div class="page-header">
     <h1>EG Editor -UAH-<small> SMAP</small></h1>
     <img id="uah" src="../images/uahLogo.png" />
 
-</div>
-<form>
-        <label class="label label-primary" for="drawType">Enter Expression (e, c, p, q):</label>
+</div-->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Existential Graph Editor</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <!--li class="active"><a href="#">Home</a></li-->
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">File
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">New</a></li>
+                    <li><a href="#">Open</a></li>
+                    <li><a href="#">Save</a></li>
+                    <li><a href="#">Save As</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Edit
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Undo</a></li>
+                    <li><a href="#">Redo</a></li>
+                    <li><a href="#">Cut</a></li>
+                    <li><a href="#">Copy</a></li>
+                    <li><a href="#">Paste</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Window
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Default Layout</a></li>
+                    <li><a href="#">Orientation</a></li>
+                    <li><a href="#">Multi Grid</a></li>
+                </ul>
+            </li>
+        <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Help
+                <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">How To</a></li>
+                <li><a href="#">Forum</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </li>
+        </ul>
+
+        <ul id="navhead" class="nav navbar-nav navbar-right">
+
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+<img class="uahImg" src="../images/uahLogo.png">
+
+    <form>
     <div class="input-group">
-        <input id="drawType" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2">
+        <input id="drawType" type="text" class="form-control" placeholder="enter expression" aria-describedby="basic-addon2">
         <span  class="input-group-addon" id="drawC" onclick="return OnClickDraw();">Submit</span>
         <span  class="input-group-addon" id="clear" onclick="return clearArea();">Clear</span>
         <span  class="input-group-addon" id="save">Save</span>
+        <!--img class="uahImg" src="../images/uahLogo.png"-->
     </div>
+
 </form>
 <br>
 <p></p>
@@ -47,12 +108,12 @@
 
                     var graph = new joint.dia.Graph;
                     //var paper = new joint.dia.Paper({ el: $('#paper-parent-expand'), width: 650, height: 250, gridSize: 1, model: graph });
-                    var paper = new joint.dia.Paper({ el: $('#myholder'), width: 1174, height: 420, gridSize: 1, model: graph });
+                    var paper = new joint.dia.Paper({ el: $('#myholder'), stroke: 1, width: 1174, height: 475, gridSize: 1, model: graph });
 
                     var r1 = new joint.shapes.basic.Rect({
                         position: { x: 20, y: 20 },
                         size: { width: 150, height: 150 },
-                        attrs: { rect: { fill: '#E74C3C', rx: 20, ry: 20 }, text: { text: '' } }
+                        attrs: { rect: { fill: '#337ab7', rx: 20, ry: 20 }, text: { text: '' } }
                     });
                     var r2 = new joint.shapes.basic.Rect({
                         position: { x: 40, y: 25 },
@@ -136,25 +197,31 @@
                     });
              </script><!--canvas id="myCanvas" --><!--/canvas-->
             </div>
+
             <div id="two"><h4 id="headSide1" >ADD</h4><panel id="sideCanvas" >
                 <div class="btn-group btn-group-justified" id="bt1" role="group" aria-label="...">
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-record" aria-hidden="false"></span></button>
+                    <div class="btn-group" id="dub" role="group">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myAlert" > dbl neg </button>
                     </div>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span></button>
+                    <div class="btn-group" id="neg" role="group">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" > negative </button>
                     </div>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-rub" aria-hidden="true"></span></button>
+                    <div class="btn-group" id="assert" role="group">
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" > assert </button>
                     </div>
-                </div><h4 id="headSide2">MODIFY</h4><div class="btn-group-vertical" role="group" aria-label="...">
-                <button type="button" class="btn btn-default">Left</button>
-                <button type="button" class="btn btn-default">Middle</button>
-                <button type="button" class="btn btn-default">Right</button>
-                <button type="button" class="btn btn-default">Right</button>
-                <button type="button" class="btn btn-default">Right</button>
-                <button type="button" class="btn btn-default">Right</button>
-            </div></panel></div>
+                </div>
+                <hr>
+                <h4 id="headSide2">MODIFY</h4><div class="btn-group-vertical" role="group" aria-label="...">
+                <button type="button" class="btn btn-info">Specialize (Negative Context)</button>
+                <button type="button" class="btn btn-info">Generalize (Positive Context)</button>
+                <button type="button" class="btn btn-info">Copy (Sub-Graph)</button>
+                <button type="button" class="btn btn-info">Remove (Sub-Graph)</button>
+                <button type="button" class="btn btn-info">2X Negative (Sub-Graph)</button>
+                <button type="button" class="btn btn-info">Remove 2X (From Sub-Graph)</button>
+            </div>
+
+            </panel>
+            </div>
         </section>
     </div>
     <!--br-->
@@ -166,6 +233,76 @@
     </div>
 
     <div class="panel-footer">Developed by: Jason Thomas, Telly Polychroniades, & Dr. William Sabados</div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myAlert" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add Double Negative</h4>
+            </div>
+            <div class="modal-body">
+                Select where You Want to Add This By clicking on The Graph Location
+            </div>
+            <div class="modal-footer">
+                <img id="uah2" src="../images/uahLogo.png">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Add</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add Negative</h4>
+            </div>
+            <div class="modal-body">
+                Enter Character:
+                <input type="text" name="addChar"><br>
+
+            </div>
+            <div class="modal-footer">
+                <img id="uah2" src="../images/uahLogo.png">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Add</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModal2" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add Assertion</h4>
+            </div>
+            <div class="modal-body">
+                Enter Character:
+                <input type="text" name="addChar"><br>
+
+            </div>
+            <div class="modal-footer">
+                <img id="uah2" src="../images/uahLogo.png">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Add</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
 </div>
 </body>
 </html>
