--- a/App_Example/support_css/joint.css
+++ b/App_Example/support_css/joint.css
@@ -212,9 +212,14 @@ text.highlighted {
    The only engine supporting outlines on SVG elements is Webkit. */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .highlighted {
-        outline: 2px solid #FF0000;
+        outline: 2px solid #FFFFFF;
         opacity: initial;
     }
+}
+
+.highlighted {
+    stroke: #FFFFFF;
+    opacity: initial;
 }
 
 /*
