--- a/DemoGUI/view/index.html
+++ b/DemoGUI/view/index.html
@@ -19,8 +19,8 @@
     <script src="../js/backbone-min.js"></script>
     <!--link to joint.js-->
     <script src="../js/joint.js"></script>
-    <!--link to jointScript.js-->
-    <script src="../view/jointScript.js"></script>
+    <!--link to egSetup.js-->
+    <script src="../view/egSetup.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
