More button functionality

--- a/DemoGUI/view/index.html
+++ b/DemoGUI/view/index.html
@@ -90,7 +90,7 @@
 
     <form>
     <div class="input-group">
-        <input id="drawType" type="text" class="form-control" placeholder="enter expression" aria-describedby="basic-addon2">
+        <input id="expression" type="text" class="form-control" placeholder="enter expression" aria-describedby="basic-addon2">
         <span  class="input-group-addon" id="drawC" onclick="return OnClickDraw();">Submit</span>
         <span  class="input-group-addon" id="clear" onclick="return clearArea();">Clear</span>
         <span  class="input-group-addon" id="save">Save</span>
